[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[project]
name = "lltv-recommender"
version = "0.1.0"
description = "LLTV recommender for Morpho Blue"
readme = "README.md"
requires-python = ">=3.8"
keywords = []
authors = [
  { name = "Marc", email = "marc@simtopia.ai"}
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "verbs==0.2.0",
  "matplotlib",
  "scipy"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.dev]
dependencies = [
  "pre-commit >= 3.3.3",
]

[tool.hatch.envs.dev.scripts]
lint = "pre-commit install && pre-commit run --all-files"

[tool.hatch.envs.examples.scripts]
morpho = "python lltv_recommender.py {args}"
